# Rentalbiz

./: .gitignore  ACCESS.md  CLAUDE.md  CLAUDE.md:Zone.Identifier  DEPLOYMENT.md  GIT_WORKFLOW.md  MANUAL_E2E_TESTING_GUIDE.md  PROJECT_PLAN.md  README.md  START_GUIDE.md  TESTING.md  TESTING_DRIVER_RECOMMENDATIONS.md  TEST_REPORT.md  render.yaml
Examples/: admin-dashboard-cal.tsx  (+6 more)
backend/: .env.example  API_SUMMARY.md  PHINEAS_FIX.md  PHOTO_MANAGEMENT.md  alembic.ini  partay_rentals.db.backup_20251024_222213  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20f88b106586_initial_migration_with_all_9_tables.py  950cdf0b9767_add_partner_inventory_schema.py  bfee1df3136e_add_performance_indexes.py
backend/src/backend/: config.py  main.py
backend/src/backend/api/: admin.py  bookings.py  chatbot.py  customers.py  drivers.py  explore.py  inventory.py  inventory_sync.py  partners.py  phineas.py  routes.py  warehouses.py
backend/src/backend/database/: __init__.py  add_services.py  base.py  connection.py  models.py  schemas.py  seed.py
backend/src/backend/scrapers/: __init__.py  base_scraper.py  craigslist_models.py  craigslist_scraper.py  create_a_party_scraper.py  scraper_models.py
backend/src/backend/services/: ai_search_service.py
backend/src/backend/tests/: conftest.py  test_api_endpoints.py  test_integration.py  test_models.py  test_schemas.py
backend/src/scripts/: verify_schema.py
backend/src/services/: __init__.py  geocoding.py  route_optimizer.py
backend/tests/: test_api_contracts.py  test_driver_recommendations.py
(+43 files in other folders)
